--- a/app/src/main/res/layout/item_sample.xml
+++ b/app/src/main/res/layout/item_sample.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/item_sample"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="3dp"
@@ -17,18 +18,18 @@
         android:padding="10dp">
 
         <TextView
-            android:id="@+id/itemSampleTitreView"
+            android:id="@+id/item_sample_titre_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="22sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
         <TextView
-            android:id="@+id/itemSampleDescriptionView"
+            android:id="@+id/item_sample_description_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:textSize="16sp" />
+            android:textSize="16sp"/>
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
